--- a/ui-byt/src/styles/globals.css
+++ b/ui-byt/src/styles/globals.css
@@ -104,3 +104,9 @@
     align-self: start;
     margin: 4px;
 }
+
+#nprogress .bar {
+    background: #6947e2;
+    height: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
